--- a/indentTree.html
+++ b/indentTree.html
@@ -1,19 +1,32 @@
-<cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <cdk-tree-node *cdkTreeNodeDef="let node" cdkTreeNodePadding class="example-tree-node">
-    <button mat-icon-button disabled></button>
-    {{node.filename}}:  {{node.type}}
-  </cdk-tree-node>
-  <cdk-tree-node *cdkTreeNodeDef="let node; when: hasChild" cdkTreeNodePadding class="example-tree-node">
-    <button mat-icon-button [attr.aria-label]="'toggle ' + node.filename" cdkTreeNodeToggle>
-      <mat-icon class="mat-icon-rtl-mirror">
-        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-      </mat-icon>
-    </button>
-    {{node.filename}}:  {{node.type}}
-  </cdk-tree-node>
-</cdk-tree>
+<h1>https://material-tree-nested.stackblitz.io</h1>
 
-
-<!-- Copyright 2018 Google Inc. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+<mat-checkbox [(ngModel)]="recursive">Recursive</mat-checkbox>
+<mat-card>
+  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+    <mat-nested-tree-node *matTreeNodeDef="let node">
+      <li>
+        <div class="mat-tree-node">  {{node.item}}</div>
+      </li>
+    </mat-nested-tree-node>
+    <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChildren">
+        <li class="example-tree-container">
+          <div class="mat-tree-node">
+            <button mat-icon-button matTreeNodeToggle
+                    [matTreeNodeToggleRecursive]="recursive"
+                  [attr.aria-label]="'toggle ' + node.filename">
+              <mat-icon>
+                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+              </mat-icon>
+            </button>
+            {{node.item}}
+        </div>
+        <ul class="example-tree-nested-node">
+          <div  *ngIf="treeControl.isExpanded(node)">
+          <ng-container matTreeNodeOutlet></ng-container>
+          </div>
+        </ul>
+      </li>
+      
+    </mat-nested-tree-node>
+  </mat-tree>
+</mat-card>
